--- a/image Animation 01/Base.lproj/Main.storyboard
+++ b/image Animation 01/Base.lproj/Main.storyboard
@@ -1,7 +1,11 @@
 <?xml version="1.0" encoding="UTF-8"?>
-<document type="com.apple.InterfaceBuilder3.CocoaTouch.Storyboard.XIB" version="3.0" toolsVersion="13122.16" targetRuntime="iOS.CocoaTouch" propertyAccessControl="none" useAutolayout="YES" useTraitCollections="YES" useSafeAreas="YES" colorMatched="YES" initialViewController="BYZ-38-t0r">
+<document type="com.apple.InterfaceBuilder3.CocoaTouch.Storyboard.XIB" version="3.0" toolsVersion="14460.31" targetRuntime="iOS.CocoaTouch" propertyAccessControl="none" useAutolayout="YES" useTraitCollections="YES" useSafeAreas="YES" colorMatched="YES" initialViewController="BYZ-38-t0r">
+    <device id="retina4_7" orientation="portrait">
+        <adaptation id="fullscreen"/>
+    </device>
     <dependencies>
-        <plugIn identifier="com.apple.InterfaceBuilder.IBCocoaTouchPlugin" version="13104.12"/>
+        <deployment identifier="iOS"/>
+        <plugIn identifier="com.apple.InterfaceBuilder.IBCocoaTouchPlugin" version="14460.20"/>
         <capability name="Safe area layout guides" minToolsVersion="9.0"/>
         <capability name="documents saved in the Xcode 8 format" minToolsVersion="8.0"/>
     </dependencies>
@@ -9,16 +13,63 @@
         <!--View Controller-->
         <scene sceneID="tne-QT-ifu">
             <objects>
-                <viewController id="BYZ-38-t0r" customClass="ViewController" customModuleProvider="target" sceneMemberID="viewController">
+                <viewController id="BYZ-38-t0r" customClass="ViewController" customModule="image_Animation_01" customModuleProvider="target" sceneMemberID="viewController">
                     <view key="view" contentMode="scaleToFill" id="8bC-Xf-vdC">
                         <rect key="frame" x="0.0" y="0.0" width="375" height="667"/>
                         <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
+                        <subviews>
+                            <imageView userInteractionEnabled="NO" contentMode="scaleToFill" horizontalHuggingPriority="251" verticalHuggingPriority="251" translatesAutoresizingMaskIntoConstraints="NO" id="pQg-bp-mZP">
+                                <rect key="frame" x="62.5" y="60" width="250" height="250"/>
+                                <constraints>
+                                    <constraint firstAttribute="height" constant="250" id="VeB-bk-OIq"/>
+                                    <constraint firstAttribute="width" constant="250" id="mJJ-7u-laC"/>
+                                </constraints>
+                            </imageView>
+                            <button opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" buttonType="roundedRect" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="Bum-7N-egx">
+                                <rect key="frame" x="140.5" y="340" width="94" height="51"/>
+                                <constraints>
+                                    <constraint firstAttribute="width" relation="greaterThanOrEqual" constant="94" id="Qcw-i2-WGh"/>
+                                    <constraint firstAttribute="height" constant="51" id="xO9-uM-pet"/>
+                                </constraints>
+                                <fontDescription key="fontDescription" type="system" pointSize="26"/>
+                                <state key="normal" title="Update"/>
+                                <connections>
+                                    <action selector="updateButtonPressed:" destination="BYZ-38-t0r" eventType="touchUpInside" id="jjx-wK-41l"/>
+                                </connections>
+                            </button>
+                            <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="Label" textAlignment="center" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="yfe-3F-gle">
+                                <rect key="frame" x="161.5" y="401" width="52.5" height="39"/>
+                                <constraints>
+                                    <constraint firstAttribute="height" constant="39" id="EXv-75-9Mx"/>
+                                    <constraint firstAttribute="height" relation="lessThanOrEqual" constant="39" id="T6X-QG-2iN"/>
+                                    <constraint firstAttribute="height" relation="greaterThanOrEqual" constant="39" id="rCa-q7-bYA"/>
+                                </constraints>
+                                <fontDescription key="fontDescription" type="system" pointSize="22"/>
+                                <nil key="textColor"/>
+                                <nil key="highlightedColor"/>
+                            </label>
+                        </subviews>
                         <color key="backgroundColor" red="1" green="1" blue="1" alpha="1" colorSpace="custom" customColorSpace="sRGB"/>
+                        <constraints>
+                            <constraint firstItem="pQg-bp-mZP" firstAttribute="centerX" secondItem="8bC-Xf-vdC" secondAttribute="centerX" id="Bjl-03-CA0"/>
+                            <constraint firstItem="yfe-3F-gle" firstAttribute="centerX" secondItem="8bC-Xf-vdC" secondAttribute="centerX" id="Lhy-FV-AuB"/>
+                            <constraint firstItem="yfe-3F-gle" firstAttribute="top" secondItem="Bum-7N-egx" secondAttribute="bottom" constant="10" id="RGw-Vc-8hh"/>
+                            <constraint firstItem="yfe-3F-gle" firstAttribute="centerX" secondItem="8bC-Xf-vdC" secondAttribute="centerX" id="S8b-gQ-Nim"/>
+                            <constraint firstItem="Bum-7N-egx" firstAttribute="centerX" secondItem="8bC-Xf-vdC" secondAttribute="centerX" id="U1X-q2-ctx"/>
+                            <constraint firstItem="Bum-7N-egx" firstAttribute="top" secondItem="pQg-bp-mZP" secondAttribute="bottom" constant="30" id="f7t-hJ-EL0"/>
+                            <constraint firstItem="pQg-bp-mZP" firstAttribute="top" secondItem="6Tk-OE-BBY" secondAttribute="top" constant="40" id="zGW-v0-aDN"/>
+                            <constraint firstItem="yfe-3F-gle" firstAttribute="top" secondItem="Bum-7N-egx" secondAttribute="bottom" constant="10" id="zPW-V5-2JE"/>
+                        </constraints>
                         <viewLayoutGuide key="safeArea" id="6Tk-OE-BBY"/>
                     </view>
+                    <connections>
+                        <outlet property="alienImageView" destination="pQg-bp-mZP" id="ee8-r6-FGI"/>
+                        <outlet property="myLabel" destination="yfe-3F-gle" id="GYf-fu-zia"/>
+                    </connections>
                 </viewController>
                 <placeholder placeholderIdentifier="IBFirstResponder" id="dkx-z0-nzr" sceneMemberID="firstResponder"/>
             </objects>
+            <point key="canvasLocation" x="-82.400000000000006" y="133.5832083958021"/>
         </scene>
     </scenes>
 </document>
